# serializer version: 1
# name: test_get_spool
  Spool(
    archived=False,
    filament=Filament(
      bed_temp=60,
      color='00AE42',
      density=1.24,
      diameter=1.75,
      external_id='bambulab_pla_bambugreen_1000_175_n',
      extruder_temp=220,
      id=1,
      material='PLA',
      name='Bambu Green',
      registered=datetime.datetime(2024, 12, 28, 23, 32, 3, tzinfo=datetime.timezone.utc),
      spool_weight=250.0,
      vendor=Vendor(
        external_id='Bambu Lab',
        id=1,
        name='Bambu Lab',
        registered=datetime.datetime(2024, 12, 28, 23, 32, 3, tzinfo=datetime.timezone.utc),
      ),
      weight=1000.0,
    ),
    first_used=datetime.datetime(2024, 12, 28, 23, 0, tzinfo=datetime.timezone.utc),
    id=1,
    initial_weight=1000.0,
    last_used=datetime.datetime(2024, 12, 28, 23, 39, 49, 300000, tzinfo=datetime.timezone.utc),
    registered=datetime.datetime(2024, 12, 28, 23, 32, 3, tzinfo=datetime.timezone.utc),
    remaining_length=335283.6194167644,
    remaining_weight=1000.0,
    spool_weight=250.0,
    used_length=0.0,
    used_weight=0.0,
  )
# ---
# name: test_get_spools
  list([
    Spool(
      archived=False,
      filament=Filament(
        bed_temp=60,
        color='00AE42',
        density=1.24,
        diameter=1.75,
        external_id='bambulab_pla_bambugreen_1000_175_n',
        extruder_temp=220,
        id=1,
        material='PLA',
        name='Bambu Green',
        registered=datetime.datetime(2024, 12, 28, 23, 32, 3, tzinfo=datetime.timezone.utc),
        spool_weight=250.0,
        vendor=Vendor(
          external_id='Bambu Lab',
          id=1,
          name='Bambu Lab',
          registered=datetime.datetime(2024, 12, 28, 23, 32, 3, tzinfo=datetime.timezone.utc),
        ),
        weight=1000.0,
      ),
      first_used=datetime.datetime(2024, 12, 28, 23, 0, tzinfo=datetime.timezone.utc),
      id=1,
      initial_weight=1000.0,
      last_used=datetime.datetime(2024, 12, 28, 23, 39, 49, 300000, tzinfo=datetime.timezone.utc),
      registered=datetime.datetime(2024, 12, 28, 23, 32, 3, tzinfo=datetime.timezone.utc),
      remaining_length=335283.6194167644,
      remaining_weight=1000.0,
      spool_weight=250.0,
      used_length=0.0,
      used_weight=0.0,
    ),
    Spool(
      archived=False,
      filament=Filament(
        bed_temp=50,
        color='519f61',
        density=1.24,
        diameter=1.75,
        external_id='polymaker_pla_polyterraforestgreen_1000_175_n',
        extruder_temp=210,
        id=2,
        material='PLA',
        name='PolyTerra™ Forest Green',
        registered=datetime.datetime(2024, 12, 28, 23, 32, 22, tzinfo=datetime.timezone.utc),
        spool_weight=140.0,
        vendor=Vendor(
          external_id='Polymaker',
          id=2,
          name='Polymaker',
          registered=datetime.datetime(2024, 12, 28, 23, 32, 22, tzinfo=datetime.timezone.utc),
        ),
        weight=1000.0,
      ),
      first_used=None,
      id=2,
      initial_weight=1000.0,
      last_used=None,
      registered=datetime.datetime(2024, 12, 28, 23, 32, 22, tzinfo=datetime.timezone.utc),
      remaining_length=335283.6194167644,
      remaining_weight=1000.0,
      spool_weight=140.0,
      used_length=0.0,
      used_weight=0.0,
    ),
  ])
# ---
